caffeine cache